# my_app1

./: .gitignore  ALL_CODE.txt  CMakeLists.txt  CMakeLists.txt.bak  README_FWPACK_TH.txt  README_fwpack.txt  dump_all_files.txt  dump_selected.txt  dump_spiffs.txt  my_app_dump.txt  partitions.csv  sdkconfig  sdkconfig.defaults
box3D/: 1pumfootsw.SLDPRT  1pumfootsw.STL  Part2.SLDPRT  Part2.STL  krong.SLDPRT  krong.STL  pha1pumfootswitch.SLDPRT  pha1pumfootswitch.STL  phakrong.SLDPRT  phakrong.STL  ~$pha1pumfootswitch.SLDPRT
esp32-2432/: esp32-2432.ino
main/: CMakeLists.txt  app_main.c  config_store.c  config_store.h  display_uart.c  display_uart.h  dns_hijack.c  dns_hijack.h  expfs.c  expfs.h  footswitch.c  footswitch.h  idf_component.yml  midi_actions.c  midi_actions.h  portal_wifi.c  portal_wifi.h  rgb_led.c  rgb_led.h  rgb_store.c  rgb_store.h  uart_midi_out.c  uart_midi_out.h  usb_midi_host.c  usb_midi_host.h
spiffs/: app.js  index.html  rgb.html  rgb.js  style.css
tools/: make_fwpack.py
